tests/programs/errors/positional_after_named.flow
// Error: positional args cannot follow named args
fn f(a:int, b:int):int {
    return a + b
}
fn main():none {
    let x = f(a: 1, 2)
}
